k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aeromap-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aeromap-frontend
  template:
    metadata:
      labels:
        app: aeromap-frontend
    spec:
      containers:
      - name: frontend
        image: cr.yandex/crp4pd0a4o1b86l5creg/aeromap-frontend:0.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
